@@ -58,10 +58,13 @@ import org.netbeans.api.project.ProjectManager;
 import org.netbeans.modules.gradle.GradleProjectLoader;
 import org.netbeans.modules.gradle.ProjectTrust;
 import org.netbeans.modules.gradle.api.GradleProjects;
+import org.netbeans.modules.gradle.api.NbGradleProject;
 import org.netbeans.modules.gradle.api.NbGradleProject.Quality;
 import org.netbeans.modules.gradle.execute.EscapeProcessingOutputStream;
 import org.netbeans.modules.gradle.execute.GradlePlainEscapeProcessor;
+import org.netbeans.modules.gradle.options.GradleExperimentalSettings;
 import org.netbeans.modules.gradle.spi.GradleSettings;
+import org.netbeans.modules.gradle.spi.execute.JavaRuntimeManager;
 import org.openide.loaders.DataFolder;
 import org.openide.loaders.DataObject;
 import org.openide.util.Exceptions;
@@ -244,6 +247,15 @@ public final class TemplateOperation implements Runnable {
          */
         public abstract InitOperation projectName(String name);
 
+        /**
+         * Specify the Gradle version to use to initialize the project.
+         *
+         * @param version gradle version
+         * @return this builder to chain the calls
+         * @since 2.47
+         */
+        public abstract InitOperation gradleVersion(String version);
+
         /** Specify the Java version the project would be compiled, tested,
          * and executed with.
          * @param version the Java version to be used
@@ -267,6 +279,7 @@ public final class TemplateOperation implements Runnable {
         private String testFramework;
         private String basePackage;
         private String projectName;
+        private String gradleVersion;
         private String javaVersion;
         private Boolean comments;
 
@@ -310,6 +323,11 @@ public final class TemplateOperation implements Runnable {
         @Override
         public Set<FileObject> execute() {
             GradleConnector gconn = GradleConnector.newConnector();
+            if (gradleVersion != null) {
+                gconn.useGradleVersion(gradleVersion);
+            }
+            JavaRuntimeManager.JavaRuntime defaultRuntime = GradleExperimentalSettings.getDefault().getDefaultJavaRuntime();
+
             target.mkdirs();
             InputOutput io = IOProvider.getDefault().getIO(projectName + " (init)", true);
             try (ProjectConnection pconn = gconn.forProjectDirectory(target).connect()) {
@@ -357,7 +375,8 @@ public final class TemplateOperation implements Runnable {
                         OutputStream out = new EscapeProcessingOutputStream(new GradlePlainEscapeProcessor(io, false));
                         OutputStream err = new EscapeProcessingOutputStream(new GradlePlainEscapeProcessor(io, false))
                 ) {
-                    BuildLauncher gradleInit = pconn.newBuild().forTasks(args.toArray(new String[0]));
+                    BuildLauncher gradleInit = pconn.newBuild().forTasks(args.toArray(String[]::new));
+                    gradleInit.setJavaHome(defaultRuntime.getJavaHome());
                     if (GradleSettings.getDefault().isOffline()) {
                         gradleInit = gradleInit.withArguments("--offline");
                     }
@@ -368,13 +387,19 @@ public final class TemplateOperation implements Runnable {
                 } catch (IOException iox) {
                 }
             } catch (GradleConnectionException | IllegalStateException ex) {
-                Exceptions.printStackTrace(ex);
+                ex.printStackTrace(io.getErr());
             } finally {
                 if (io.getOut() != null) io.getOut().close();
                 if (io.getErr() != null) io.getErr().close();
             }
             gconn.disconnect();
             return Collections.singleton(FileUtil.toFileObject(target));
+        }
+
+        @Override
+        public InitOperation gradleVersion(String version) {
+            this.gradleVersion = version;
+            return this;
         }
 
         @Override
@@ -442,6 +467,7 @@ public final class TemplateOperation implements Runnable {
                 FileUtil.createFolder(dir);
                 Thread.sleep(200);
             } catch (InterruptedException | IOException ex) {
+                Exceptions.printStackTrace(ex);
             }
             return null;
         }
@@ -477,9 +503,10 @@ public final class TemplateOperation implements Runnable {
                     }
 
                 } catch (IOException ex) {
+                    Exceptions.printStackTrace(ex);
                 }
             }
-            return Collections.<FileObject>emptySet();
+            return Set.of();
         }
 
     }
@@ -489,7 +516,7 @@ public final class TemplateOperation implements Runnable {
         final List<String> importantFiles;
 
         public PreloadProject(File dir) {
-            this(dir, Collections.emptyList());
+            this(dir, List.of());
         }
 
         public PreloadProject(File dir, List<String> importantFiles) {
@@ -526,7 +553,7 @@ public final class TemplateOperation implements Runnable {
                             //Just load the project into the cache.
                             GradleProjectLoader loader = nbProject.getLookup().lookup(GradleProjectLoader.class);
                             if (loader != null) {
-                                loader.loadProject(Quality.FULL_ONLINE, null, true, false);
+                                loader.loadProject(NbGradleProject.loadOptions(Quality.FULL_ONLINE).setIgnoreCache(true));
                             }
                         }
                         Set<FileObject> ret = new LinkedHashSet<>();
@@ -540,6 +567,7 @@ public final class TemplateOperation implements Runnable {
                         return ret;
                     }
                 } catch (IOException | IllegalArgumentException ex) {
+                    Exceptions.printStackTrace(ex);
                 }
             }
             return null;
@@ -566,6 +594,7 @@ public final class TemplateOperation implements Runnable {
         @Override
         public Set<FileObject> execute() {
             GradleConnector gconn = GradleConnector.newConnector();
+            JavaRuntimeManager.JavaRuntime defaultRuntime = GradleExperimentalSettings.getDefault().getDefaultJavaRuntime();
             try (ProjectConnection pconn = gconn.forProjectDirectory(projectDir).connect()) {
                 List<String> args = new ArrayList<>();
                 args.add("wrapper"); //NOI18N
@@ -573,14 +602,16 @@ public final class TemplateOperation implements Runnable {
                     args.add("--gradle-version"); //NOI18N
                     args.add(version);
                 }
+                BuildLauncher init = pconn.newBuild()
+                        .setJavaHome(defaultRuntime.getJavaHome());
                 if (GradleSettings.getDefault().isOffline()) {
-                    pconn.newBuild().withArguments("--offline").forTasks(args.toArray(new String[0])).run(); //NOI18N
-                } else {
-                    pconn.newBuild().forTasks(args.toArray(new String[0])).run();
+                    init = init.withArguments("--offline");
                 }
+                init.forTasks(args.toArray(String[]::new)).run();
             } catch (GradleConnectionException | IllegalStateException ex) {
                 // Well for some reason we were  not able to load Gradle.
                 // Ignoring that for now
+                Exceptions.printStackTrace(ex);
             }
             gconn.disconnect();
             return null;
@@ -643,7 +674,7 @@ public final class TemplateOperation implements Runnable {
                     } catch (IOException | ScriptException ex) {
                         throw new IOException(ex.getMessage(), ex);
                     }
-                    return important ? Collections.singleton(fo) : null;
+                    return important ? Set.of(fo) : null;
                 } catch (IOException ex) {}
             } catch (IOException ex) {}
             return null;
@@ -680,9 +711,9 @@ public final class TemplateOperation implements Runnable {
                     DataFolder targetFolder = DataFolder.findFolder(targetParent);
                     DataObject o = DataObject.find(template);
                     DataObject newData = o.createFromTemplate(targetFolder, targetName, tokens);
-                    return important ? Collections.singleton(newData.getPrimaryFile()) : null;
+                    return important ? Set.of(newData.getPrimaryFile()) : null;
                 } catch (IOException ex) {
-
+                    Exceptions.printStackTrace(ex);
                 }
             }
             return null;
