@@ -29,6 +29,7 @@ import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -64,7 +65,6 @@ import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileRenameEvent;
 import org.openide.filesystems.FileUtil;
 import org.openide.filesystems.URLMapper;
-import org.openide.util.NbBundle.Messages;
 import org.openide.util.RequestProcessor;
 import org.openide.util.RequestProcessor.Task;
 import org.openide.util.Utilities;
@@ -83,27 +83,50 @@ public class MultiSourceRootProvider implements ClassPathProvider {
     public static boolean DISABLE_MULTI_SOURCE_ROOT = Boolean.getBoolean("java.disable.multi.source.root");
     public static boolean SYNCHRONOUS_UPDATES = false;
 
-    private static final Set<String> MODULAR_DIRECTORY_OPTIONS = new HashSet<>(Arrays.asList(
-        "--module-path", "-p"
-    ));
+    private static final Set<String> MODULAR_DIRECTORY_OPTIONS = Set.of("--module-path", "-p");
+    private static final Set<String> CLASSPATH_OPTIONS = Set.of("--class-path", "-cp", "-classpath");
 
     //TODO: the cache will probably be never cleared, as the ClassPath/value refers to the key(?)
     private Map<FileObject, ClassPath> file2SourceCP = new WeakHashMap<>();
     private Map<FileObject, ClassPath> root2SourceCP = new WeakHashMap<>();
+    private Map<FileObject, Runnable> root2RegistrationRefresh = new WeakHashMap<>();
+    private final Set<FileObject> registeredRoots = Collections.newSetFromMap(new WeakHashMap<>());
     private Map<FileObject, ClassPath> file2AllPath = new WeakHashMap<>();
     private Map<FileObject, ClassPath> file2ClassPath = new WeakHashMap<>();
     private Map<FileObject, ClassPath> file2ModulePath = new WeakHashMap<>();
 
-    static boolean isSupportedFile(FileObject file) {
-        return SingleSourceFileUtil.isSingleSourceFile(file)
-                // MultiSourceRootProvider assumes it can convert FileObject to
-                // java.io.File, so filter here
-                && Objects.equals("file", file.toURI().getScheme());
+    boolean isSupportedFile(FileObject file) {
+        // MultiSourceRootProvider assumes it can convert FileObject to
+        // java.io.File, so filter here
+        if (!Objects.equals("file", file.toURI().getScheme())) {
+            return false;
+        }
+
+        if (SingleSourceFileUtil.isSingleSourceFile(file)) {
+            return true;
+        }
+
+        List<FileObject> registeredRootsCopy;
+
+        synchronized (registeredRoots) {
+            registeredRootsCopy = new ArrayList<>(registeredRoots);
+        }
+
+        for (FileObject existingRoot : registeredRootsCopy) {
+            if (file.equals(existingRoot) || FileUtil.isParentOf(existingRoot, file)) {
+                return true;
+            }
+        }
+
+        return false;
     }
 
     @Override
     public ClassPath findClassPath(FileObject file, String type) {
-        if (! isSupportedFile(file)) {
+        if (SYNCHRONOUS_UPDATES) {
+            WORKER.post(() -> {}).waitFinished(); // flush tasks for tests (assumes threadpool size == 1)
+        }
+        if (!isSupportedFile(file)) {
             return null;
         }
         switch (type) {
@@ -148,13 +171,17 @@ public class MultiSourceRootProvider implements ClassPathProvider {
                             }
                         }
 
-                        return root2SourceCP.computeIfAbsent(root, r -> {
-                            ClassPath srcCP = ClassPathSupport.createClassPath(Arrays.asList(new RootPathResourceImplementation(r)));
-                            if (registerRoot(r)) {
-                                GlobalPathRegistry.getDefault().register(ClassPath.SOURCE, new ClassPath[] {srcCP});
-                            }
-                            return srcCP;
+                        ClassPath srcCP = root2SourceCP.computeIfAbsent(root, r -> {
+                            return ClassPathSupport.createClassPath(Arrays.asList(new RootPathResourceImplementation(r)));
                         });
+
+                        ParsedFileOptions options = SingleSourceFileUtil.getOptionsFor(root);
+
+                        if (options != null) {
+                            WORKER.post(root2RegistrationRefresh.computeIfAbsent(root, r -> new RegistrationRefresh(srcCP, options, r)));
+                        }
+
+                        return srcCP;
                     } catch (IOException ex) {
                         LOG.log(Level.FINE, "Failed to read sourcefile " + file, ex);
                     }
@@ -201,6 +228,18 @@ public class MultiSourceRootProvider implements ClassPathProvider {
 
     public boolean isSourceLauncher(FileObject file) {
         return getSourceRoot(file) != null;
+    }
+
+    public boolean isRegisteredSourceLauncher(FileObject file) {
+        FileObject root = getSourceRoot(file);
+
+        if (root == null) {
+            return false;
+        }
+
+        synchronized (registeredRoots) {
+            return registeredRoots.contains(root);
+        }
     }
 
     private ClassPath getBootPath(FileObject file) {
@@ -269,13 +308,6 @@ public class MultiSourceRootProvider implements ClassPathProvider {
         }
     }
 
-    @Messages({
-        "SETTING_AutoRegisterAsRoot=false"
-    })
-    private static boolean registerRoot(FileObject root) {
-        return "true".equals(Bundle.SETTING_AutoRegisterAsRoot());
-    }
-
     private static final class AttributeBasedClassPathImplementation extends FileChangeAdapter implements ChangeListener, ClassPathImplementation {
         private final PropertyChangeSupport pcs = new PropertyChangeSupport(this);
         private final Task updateDelegatesTask = WORKER.create(this::doUpdateDelegates);
@@ -322,6 +354,19 @@ public class MultiSourceRootProvider implements ClassPathProvider {
 
                 if (optionKeys.contains(currentOption)) {
                     for (String piece : parsed.get(i + 1).split(File.pathSeparator)) {
+                        boolean hasStar = false;
+                        boolean isClassPath = CLASSPATH_OPTIONS.contains(currentOption);
+
+                        if (isClassPath && piece.endsWith("*") && piece.length() > 1) {
+                            char sep = piece.charAt(piece.length() - 2);
+
+                            if (sep == File.separatorChar ||
+                                sep == '/') {
+                                hasStar = true;
+                                piece = piece.substring(0, piece.length() - 2);
+                            }
+                        }
+
                         File pieceFile = new File(piece);
 
                         if (!pieceFile.isAbsolute()) {
@@ -348,6 +393,23 @@ public class MultiSourceRootProvider implements ClassPathProvider {
                             } else {
                                 expandedPaths = Collections.emptyList();
                             }
+                        } else if (hasStar && isClassPath) {
+                            if (!toRemoveFSListeners.remove(f.getAbsolutePath()) &&
+                                addedFSListeners.add(f.getAbsolutePath())) {
+                                FileUtil.addFileChangeListener(this, f);
+                            }
+
+                            File[] children = f.listFiles();
+
+                            if (children != null) {
+                                expandedPaths = Arrays.stream(children)
+                                                      .filter(c -> c.getName()
+                                                                    .toLowerCase(Locale.ROOT)
+                                                                    .endsWith(".jar"))
+                                                      .toList();
+                            } else {
+                                expandedPaths = Collections.emptyList();
+                            }
                         } else {
                             expandedPaths = Arrays.asList(f);
                         }
@@ -355,7 +417,10 @@ public class MultiSourceRootProvider implements ClassPathProvider {
                         for (File expanded : expandedPaths) {
                             URL u = FileUtil.urlForArchiveOrDir(expanded);
                             if (u == null) {
-                                throw new IllegalArgumentException("Path entry looks to be invalid: " + piece); // NOI18N
+                                LOG.log(Level.INFO,
+                                        "While parsing command line option '{0}' with parameter '{1}', path entry looks to be invalid: '{2}'",
+                                        new Object[] {currentOption, parsed.get(i + 1), piece});
+                                continue;
                             }
                             newURLs.add(u);
                             newDelegates.add(ClassPathSupport.createResource(u));
@@ -468,4 +533,43 @@ public class MultiSourceRootProvider implements ClassPathProvider {
         }
         
     }
+
+    private class RegistrationRefresh implements ChangeListener, Runnable {
+        private final ClassPath srcCP;
+        private final ParsedFileOptions options;
+        private final FileObject root;
+
+        public RegistrationRefresh(ClassPath srcCP,
+                                   ParsedFileOptions options,
+                                   FileObject root) {
+            this.srcCP = srcCP;
+            this.options = options;
+            this.root = root;
+            options.addChangeListener(this);
+        }
+
+        @Override
+        public void run() {
+            GlobalPathRegistry registry = GlobalPathRegistry.getDefault();
+            if (options.registerRoot()) {
+                synchronized (registeredRoots) {
+                    registeredRoots.add(root);
+                }
+                registry.register(ClassPath.SOURCE, new ClassPath[] {srcCP});
+            } else {
+                synchronized (registeredRoots) {
+                    registeredRoots.remove(root);
+                }
+                if (registry.getPaths(ClassPath.SOURCE).contains(srcCP)) {
+                    registry.unregister(ClassPath.SOURCE, new ClassPath[] {srcCP});
+                }
+            }
+        }
+
+        @Override
+        public void stateChanged(ChangeEvent e) {
+            WORKER.post(this);
+        }
+    }
+
 }
